--- a/tailwind-jquery webpages/24/index.html
+++ b/tailwind-jquery webpages/24/index.html
@@ -320,7 +320,7 @@
             </div>
           </div>
 
-          <footer class="bg-black text-white py-8">
+          <footer class=" text-white p-10">
             <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-8">
               <!-- Product Section -->
               <div>
